Tabs Subtabs Exercise

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tabs-subtabs-exercise",
+  "name": "form-validations",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
