--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,16 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "user.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "delete.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
